✨ Feat: [공통 컴포넌트] 버튼 컴포넌트 생성 #16

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,14 @@
     "editor.formatOnSave": true,
     // Enable per-language
     "[javascript]": {
-      "editor.formatOnSave": false
+        "editor.formatOnSave": false
     },
     "editor.codeActionsOnSave": {
-      // For ESLint
-      "source.fixAll.eslint": true
+        // For ESLint
+        "source.fixAll.eslint": true
     },
     "eslint.alwaysShowStatus": true,
     "prettier.disableLanguages": ["js"],
     "files.autoSave": "onFocusChange",
+    "editor.tabSize": 2
 }
