🐛 Fix : eslint 추가 , App.js 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,12 @@
   "extends": ["airbnb", "plugin:prettier/recommended"],
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "jsx-a11y/label-has-associated-control": [
+      2,
+      {
+        "labelAttributes": ["htmlFor"]
+      }
+    ]
   }
 }
