--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
   },
   "extends": ["airbnb", "plugin:prettier/recommended"],
   "rules": {
+    "import/no-extraneous-dependencies": "off",
+    "no-console": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "jsx-a11y/label-has-associated-control": [
